src/test/ui/error-codes/E0110.stderr
error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/E0110.rs:1:14
   |
LL | type X = u32<'static>; //~ ERROR E0110
   |              ^^^^^^^ lifetime parameter not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0110`.
